// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots common/SquareButton Basic 1`] = `
<div>
  <button
    class="MuiButtonBase-root css-10d1a0h-MuiButtonBase-root"
    tabindex="0"
    type="button"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1o0qjyj-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardContent-root css-d64700-MuiCardContent-root"
      >
        <span />
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-qscjxq-MuiTypography-root"
          title="Some label"
        >
          Some label
        </p>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Storyshots common/SquareButton Different Icon Color 1`] = `
<div>
  <button
    class="MuiButtonBase-root css-10d1a0h-MuiButtonBase-root"
    tabindex="0"
    type="button"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1o0qjyj-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardContent-root css-d64700-MuiCardContent-root"
      >
        <span />
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-qscjxq-MuiTypography-root"
          title="Some label"
        >
          Some label
        </p>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Storyshots common/SquareButton Different Icon Size 1`] = `
<div>
  <button
    class="MuiButtonBase-root css-10d1a0h-MuiButtonBase-root"
    tabindex="0"
    type="button"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1o0qjyj-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardContent-root css-d64700-MuiCardContent-root"
      >
        <span />
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-qscjxq-MuiTypography-root"
          title="Some label"
        >
          Some label
        </p>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Storyshots common/SquareButton Primary 1`] = `
<div>
  <button
    class="MuiButtonBase-root css-10d1a0h-MuiButtonBase-root"
    tabindex="0"
    type="button"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1nmpgjc-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardContent-root css-d64700-MuiCardContent-root"
      >
        <span />
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-11x8x5l-MuiTypography-root"
          title="Some label"
        >
          Some label
        </p>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;
